# requests

./: .clang-format  .drone.star  .gitmodules  CMakeLists.txt  Jamfile  readme.md
.drone/: drone.bat  drone.sh
doc/: Jamfile  requests.adoc
doc/requests/: high-level.adoc  mid-level.adoc  overview.adoc  reference.adoc
doc/requests/reference/: body_traits.adoc  connection.adoc  connection_pool.adoc  cookie.adoc  cookie_jar.adoc  download.adoc  error.adoc  form.adoc  http.adoc  json.adoc  method.adoc  mime_types.adoc  public_suffix.adoc  redirect.adoc  request.adoc  request_options.adoc  request_parameters.adoc  request_settings.adoc  response.adoc  service.adoc  session.adoc  source.adoc  stream.adoc
example/: CMakeLists.txt  Jamfile  basic-auth-future.cpp  basic-auth.cpp  docker.cpp  github-issues.hpp  github.cpp  impl.cpp  line_reader.cpp  link.cpp  methods-future.cpp  methods.cpp  params.cpp  wget.cpp  xml.cpp
include/boost/: requests.hpp
include/boost/requests/: async_semaphore.hpp  basic_session.hpp  body_traits.hpp  connection.hpp  connection_pool.hpp  cookie.hpp  cookie_jar.hpp  cookies.hpp  download.hpp  error.hpp  facade.hpp  form.hpp  free.hpp  http.hpp  json.hpp  keep_alive.hpp  method.hpp  methods.hpp  mime_types.hpp  op.hpp  optional_ssl.hpp  options.hpp  public_suffix.hpp  redirect.hpp  request.hpp  request_options.hpp  request_parameters.hpp  request_settings.hpp  response.hpp  service.hpp  session.hpp  source.hpp  src.hpp  src.ipp  ssl.hpp  stream.hpp  string_response.h  traits.hpp  websocket.hpp
include/boost/requests/cookies/: cookie.hpp  jar.hpp  parser.hpp  public_suffix.hpp  set_cookie.hpp  src.hpp
include/boost/requests/cookies/grammar/: any_char_except.hpp  cookie_octet.hpp  domain.hpp  fixed_token_rule.hpp  non_zero_digit.hpp  sane_cookie_date.hpp  token.hpp
include/boost/requests/cookies/grammar/impl/: sane_cookie_date.ipp
include/boost/requests/cookies/impl/: public_suffix.ipp  set_cookie.ipp
include/boost/requests/detail/: alias.def  async_coroutine.hpp  bilist_node.hpp  cache_service.hpp  check_endpoint.hpp  condition_variable.hpp  config.hpp  connection_impl.hpp  defaulted.hpp  define.hpp  executor_with_default.hpp  faux_coroutine.hpp  lock.hpp  lock_guard.hpp  mutex.hpp  pmr.hpp  poly_handler.hpp  redirect_value.hpp  response_type.hpp  semaphore_wait_op.hpp  semaphore_wait_op_model.hpp  ssl.hpp  state_machine.hpp  tracker.hpp  undef.hpp  undefine.hpp  variadic.hpp
include/boost/requests/detail/impl/: condition_variable.ipp  connection_impl.hpp  connection_impl.ipp  mutex.ipp  semaphore_wait_op.hpp  semaphore_wait_op_model.hpp  ssl.ipp
include/boost/requests/fields/: keep_alive.hpp  link.hpp  location.hpp  set_cookie.hpp
include/boost/requests/fields/impl/: keep_alive.ipp  link.ipp  location.ipp  set_cookie.ipp
include/boost/requests/grammar/: alternate_rule.hpp  any_char_except_ctl_semicolon.hpp  attr_char.hpp  cookie_octet.hpp  cookie_token.hpp  domain.hpp  fixed_token_rule.hpp  mime_char.hpp  non_zero_digit.hpp  ptokenchar.hpp  raw_string.hpp  token_rule.hpp
include/boost/requests/impl/: async_semaphore_base.hpp  basic_async_semaphore.hpp  connection.hpp  connection.ipp  connection_pool.hpp  connection_pool.ipp  cookie_jar.ipp  error.ipp  free.hpp  json.ipp  keep_alive.ipp  mime_types.ipp  options.ipp  public_suffix.inc  public_suffix.ipp  redirect.ipp  request.hpp  request.ipp  request_options.ipp  request_settings.ipp  response.ipp  session.hpp  session.ipp  source.hpp  source.ipp  stream.hpp  stream.ipp
include/boost/requests/op/: auth.hpp
include/boost/requests/rfc/: dates.hpp  language.hpp  link.hpp  quoted_string.hpp
include/boost/requests/rfc/impl/: dates.ipp  link.ipp  quoted_string.ipp
include/boost/requests/sources/: buffer.hpp  empty.hpp  file.hpp  form.hpp  json.hpp  string.hpp  string_view.hpp
include/boost/requests/sources/impl/: buffer.ipp  empty.ipp  file.ipp  form.ipp  json.ipp
meta/: libraries.json
src/: connection_pool.cpp  cookie_jar.cpp  error.cpp  json.cpp  mime_types.cpp  public_suffix.cpp  redirect.cpp  request.cpp  request_options.cpp  session.cpp  src.cpp  stream.cpp
src/detail/: condition_variable.cpp  connection_impl.cpp  mutex.cpp
src/fields/: keep_alive.cpp  link.cpp  location.cpp  set_cookie.cpp
src/rfc/: dates.cpp  link.cpp  quoted_string.cpp
src/sources/: buffer.cpp  empty.cpp  file.cpp  form.cpp  json.cpp
test/: CMakeLists.txt  Jamfile  async_semaphore.cpp  basic_session.cpp  cache_service.cpp  connection.cpp  connection_pool.cpp  cookie.cpp  cookie_grammar.cpp  cookie_jar.cpp  coroutine_test_case.hpp  endpoint.cpp  error.cpp  extern.hpp  facade.cpp  fixed_token_rule.cpp  form.cpp  free.cpp  json.cpp  keep_alive.cpp  link.cpp  location.cpp  main_test.cpp  method.cpp  methods.cpp  optional_ssl.cpp  options.cpp  pool.cpp  quoted_string.cpp  raw_string.cpp  redirect.cpp  request.cpp  response.cpp  rfc.cpp  service.cpp  session.cpp  source.cpp  ssl.cpp  string_maker.hpp  tdd.cpp  (+2 more)
test/detail/: async_coroutine.cpp  condition_variable.cpp  executor_with_default.cpp  faux_coroutine.cpp  mutex.cpp  redirect_value.cpp
test/fixtures/: httpbin.cpp  httpbin.hpp  server.cpp  server.hpp
test/httpbin/: cookie.cpp  json.cpp  method.cpp
test/unit/: connection.cpp  connection_pool.cpp  cookie_grammar.cpp  cookie_jar.cpp  fixed_token_rule.cpp  form.cpp  keep_alive.cpp  link.cpp  quoted_string.cpp  raw_string.cpp  redirect.cpp  request_stream.cpp  rfc.cpp  service.cpp  session.cpp  source.cpp  token_rule.cpp
test/unit/detail/: condition_variable.cpp
tools/: get-boost.sh  public_list.py  user-config.jam
